--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.chriscarini.jetbrains'
-version '0.0.2'
+version '0.0.3'
 
 sourceCompatibility = 1.8
 
@@ -22,14 +22,15 @@ dependencies {
 }
 
 intellij {
-    version '2018.2'
+    version '2018.3'
     plugins[]
     pluginName 'Environment Variable Settings Summary'
 }
 patchPluginXml {
     changeNotes """
-        <h4>[Unreleased]</h4>
-        
+        <h4>[0.0.3] - 2018-11-30</h4>
+        <h5>Added</h5>
+        <ol><li>Upgrading for 2018.3.</li></ol>
         <h4>[0.0.2] - 2018-08-04</h4>
         <h5>Added</h5>
         <ol><li>Settings for plugin to allow environment variables to be excluded from the summary output.</li></ol>
