--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
   id 'java'
-  id 'org.jetbrains.intellij' version '0.3.5'
+  id 'org.jetbrains.intellij' version '0.4.5'
 }
 
 group 'com.chriscarini.jetbrains'
@@ -23,15 +23,19 @@ dependencies {
 }
 
 intellij {
-  version '191.4212.41'
+  version '2019.1'
   plugins[]
   pluginName 'Environment Variable Settings Summary'
 }
 patchPluginXml {
   changeNotes """
-        <h4>[0.0.4] - 2019-01-24</h4>
+        <h4>[0.0.4] - 2019-04-01</h4>
         <h5>Added</h5>
-        <ol><li>Prepare for 2019.1 release (based off of build 191.4212.41).</li></ol>
+        <ol>
+        <li>Upgrading for 2019.1.</li>
+        <li>Adding an icon for use in 2019.1 release.</li>
+        <li>Migrating to newer extension points.</li>
+        </ol>
         <h4>[0.0.3] - 2018-11-30</h4>
         <h5>Added</h5>
         <ol><li>Upgrading for 2018.3.</li></ol>
@@ -47,13 +51,15 @@ patchPluginXml {
 // The below file (jetbrainsCredentials.gradle) should contain the below:
 //    project.ext.set("intellijPublishUsername", "YOUR_USERNAME_HERE")
 //    project.ext.set("intellijPublishPassword", "YOUR_PASSWORD_HERE")
+//    project.ext.set("intellijPluginPublishToken", "YOUR_TOKEN_HERE")
 //
 // Because this contains the username and password, this file is also included in .gitignore file.
 apply from: 'jetbrainsCredentials.gradle'
 
 publishPlugin {
-  username intellijPublishUsername
-  password intellijPublishPassword
+//  username intellijPublishUsername
+//  password intellijPublishPassword
+  token intellijPluginPublishToken
 }
 
 task checkJetBrainsCreds {
