--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
   id 'java'
-  id 'org.jetbrains.intellij' version '0.4.5'
+  id 'org.jetbrains.intellij' version '0.4.9'
 }
 
 group 'com.chriscarini.jetbrains'
-version '0.0.4'
+version '0.0.5'
 
 sourceCompatibility = 1.8
 
@@ -23,12 +23,22 @@ dependencies {
 }
 
 intellij {
-  version '2019.1'
+  // To use/download EAP add '-EAP-SNAPSHOT' to the version, i.e. 'IU-191.6014.8-EAP-SNAPSHOT'
+  version '2019.1.3'
   plugins[]
   pluginName 'Environment Variable Settings Summary'
 }
 patchPluginXml {
   changeNotes """
+        <h4>[0.0.5] - 2019-07-24</h4>
+        <h5>Upgrade</h5>
+        <ol>
+        <li>Upgrading to 2019.1.3.</li>
+        </ol>
+        <h5>Fixed</h5>
+        <ol>
+        <li>Fixing <a href="https://github.com/ChrisCarini/environment-variable-settings-summary-intellij-plugin/issues/2">#2</a> - No generic resource bundle causes stack trace for certain languages.</li>
+        </ol>
         <h4>[0.0.4] - 2019-04-01</h4>
         <h5>Added</h5>
         <ol>
