--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,23 @@
+buildscript {
+  ext {
+    javaVersion = '1.8'
+
+    // see https://www.jetbrains.com/intellij-repository/releases/
+    // and https://www.jetbrains.com/intellij-repository/snapshots/
+    // To use/download EAP add '-EAP-SNAPSHOT' to the version, i.e. 'IU-191.6014.8-EAP-SNAPSHOT'
+    intellijVersion = '2019.2'
+  }
+}
+
 plugins {
   id 'java'
   id 'org.jetbrains.intellij' version '0.4.9'
 }
 
 group 'com.chriscarini.jetbrains'
-version '0.0.5'
+version '1.0.0'
 
-sourceCompatibility = 1.8
+sourceCompatibility = javaVersion
 
 repositories {
   mavenCentral()
@@ -23,38 +34,25 @@ dependencies {
 }
 
 intellij {
-  // To use/download EAP add '-EAP-SNAPSHOT' to the version, i.e. 'IU-191.6014.8-EAP-SNAPSHOT'
-  version '2019.1.3'
+  version intellijVersion
   plugins[]
   pluginName 'Environment Variable Settings Summary'
 }
+
+//runIde {
+//  jbrVersion 'jbrex8u202b1483.21'
+//}
+
 patchPluginXml {
   changeNotes """
-        <h4>[0.0.5] - 2019-07-24</h4>
+        <h4>[1.0.0] - 2019-07-25</h4>
         <h5>Upgrade</h5>
         <ol>
-        <li>Upgrading to 2019.1.3.</li>
-        </ol>
-        <h5>Fixed</h5>
-        <ol>
-        <li>Fixing <a href="https://github.com/ChrisCarini/environment-variable-settings-summary-intellij-plugin/issues/2">#2</a> - No generic resource bundle causes stack trace for certain languages.</li>
-        </ol>
-        <h4>[0.0.4] - 2019-04-01</h4>
+        <li>Upgrading to 2019.2.</li>
         <h5>Added</h5>
         <ol>
-        <li>Upgrading for 2019.1.</li>
-        <li>Adding an icon for use in 2019.1 release.</li>
-        <li>Migrating to newer extension points.</li>
+        <li>"zh" locale under <a href="https://github.com/ChrisCarini/environment-variable-settings-summary-intellij-plugin/issues/3">#3</a> & <a href="https://github.com/ChrisCarini/environment-variable-settings-summary-intellij-plugin/pull/4">#4</a></li>
         </ol>
-        <h4>[0.0.3] - 2018-11-30</h4>
-        <h5>Added</h5>
-        <ol><li>Upgrading for 2018.3.</li></ol>
-        <h4>[0.0.2] - 2018-08-04</h4>
-        <h5>Added</h5>
-        <ol><li>Settings for plugin to allow environment variables to be excluded from the summary output.</li></ol>
-        <h4>[0.0.1] - 2018-07-25</h4>
-        <h5>Added</h5>
-        <ol><li>Initial release.</li></ol>
         """
 }
 
