Adding GitHub actions gradle.yaml; Adding gradle wrapper to VCS

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
+.gradle/
+.idea/
+build/
+out/
 *.iml
 *.ipr
 *.iws
-.gradle/
-build/
-gradle/
-out/
-gradlew*
 jetbrainsCredentials.gradle
 *.DS_Store
