--- a/.github/workflows/compatibility.yml
+++ b/.github/workflows/compatibility.yml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Build the plugin using Gradle
         run: ./gradlew buildPlugin
+        env:
+          IS_CI: "True"
 
       - uses: thepieterdc/intellij-plugin-verifier-action@v1.1.0
         with:
