--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ intellij {
 
 patchPluginXml {
   changeNotes """
-        <h4>[2.2.0] - 2020-07-29</h4>
+        <h4>[$version] - ${new Date().format('yyyy-MM-dd')}</h4>
         <h5>Upgrade</h5>
         <ol>
         <li>Upgrading to 2020.2</li>
