--- a/.github/workflows/compatibility.yml
+++ b/.github/workflows/compatibility.yml
@@ -1,13 +1,20 @@
 name: IntelliJ Plugin Compatibility
 
 on:
+  # Trigger the workflow on pushes to only the 'master' branch (this avoids duplicate checks being run e.g. for dependabot pull requests)
   push:
+    branches: [ master ]
+
+  # Trigger the workflow on any pull request
+  pull_request:
+
+  # Trigger the workflow on a schedule; daily
   schedule:
     - cron: '0 0 * * *'
 
 jobs:
   compatibility:
-    name: Ensure plugin compatibility against 2021.2 & the latest EAP snapshot for both IDEA Community, IDEA Ultimate.
+    name: Ensure plugin compatibility against 2021.2.2 & the latest EAP snapshot for both IDEA Community, IDEA Ultimate.
 
     runs-on: ubuntu-latest
 
@@ -23,16 +30,14 @@ jobs:
 
       - name: Build the plugin
         run: ./gradlew buildPlugin
-        env:
-          IS_CI: "True"
 
       - name: Verify plugin on IntelliJ Platforms
         id: verify
         uses: ChrisCarini/intellij-platform-plugin-verifier-action@latest
         with:
           ide-versions: |
-            ideaIC:2021.2
-            ideaIU:2021.2
+            ideaIC:2021.2.2
+            ideaIU:2021.2.2
             ideaIC:LATEST-EAP-SNAPSHOT
             ideaIU:LATEST-EAP-SNAPSHOT
 
