--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-.gradle/
-.idea/
-build/
-out/
 *.iml
 *.ipr
 *.iws
+.gradle/
+.qodana/
+build/
+gradle/
+out/
+gradlew*
 jetbrainsCredentials.gradle
+private.pem
+chain.crt
 *.DS_Store
