--- a/.github/workflows/scorecards-analysis.yml
+++ b/.github/workflows/scorecards-analysis.yml
@@ -28,8 +28,7 @@ jobs:
           persist-credentials: false
 
       - name: "Run analysis"
-#        uses: ossf/scorecard-action@c8416b0b2bf627c349ca92fc8e3de51a64b005cf # v1.0.1
-        uses: laurentsimon/scorecard-action@bug/defaultbranch
+        uses: ossf/scorecard-action@c8416b0b2bf627c349ca92fc8e3de51a64b005cf # v1.0.1
         with:
           results_file: results.sarif
           results_format: sarif
