--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ pluginVersion = 2.7.0
 
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions
-pluginVerifierIdeVersions = 2022.2
+pluginVerifierIdeVersions = 2022.2,LATEST-EAP-SNAPSHOT
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = IC
